# CuB

./: .gitignore  visualize.py
ip_framework/: .gitignore  Ausarbeitung.md  defined_pipelines.py  img_stats.py  main.py  pyproject.toml
ip_framework/pipeline/steps/: camera.py  fast_convolution.py  fast_linear_scaling.py  median_filter.py  morph_ops.py  semantic_segmentation.py  slow_convolution.py  slow_linear_scaling.py
ip_framework_empty/ip_framework_empty/: README.md  defined_pipelines.py  main.py  requirements.txt
ip_framework_empty/ip_framework_empty/pipeline/: pipeline.py
ip_framework_empty/ip_framework_empty/pipeline/steps/: morph_ops.py  yolo_object_detection.py
ip_framework_uv_empty/ip_framework/: README.md
ip_framework_uv_empty/ip_framework/pipeline/steps/: semantic_segmentation.py
